[package]
name = "querytools"
version = "0.1.0"
authors = ["Joseph Manno <joseph.a.manno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "^0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
webbrowser = "0.5.5"
device_query = "0.2.8"
clipboard-win = "*"
enigo = "*"